# DisCPP

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE.md  README.md  Readme.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: linux-ci-workflow.yml  linux_unittest_compile.yml  unittest_compile.yml  windows-ci-workflow.yml  windows_unittest_compile.yml
CMake/: FindMbedTLS.cmake  Findixwebsocket.cmake
docs/: all__discord__events_8h_source.html  annotated.html  attachment_8h_source.html  audit__log_8h_source.html  cache_8h_source.html  channel_8h_source.html  channel__create__event_8h_source.html  channel__delete__event_8h_source.html  channel__pins__update__event_8h_source.html  channel__update__event_8h_source.html  classdiscpp_1_1Activity-members.html  classdiscpp_1_1Activity.html  classdiscpp_1_1Attachment-members.html  classdiscpp_1_1Attachment.html  classdiscpp_1_1AuditEntryOptions-members.html  classdiscpp_1_1AuditEntryOptions.html  classdiscpp_1_1AuditLog-members.html  classdiscpp_1_1AuditLog.html  classdiscpp_1_1AuditLogChange-members.html  classdiscpp_1_1AuditLogChange.html  classdiscpp_1_1AuditLogEntry-members.html  classdiscpp_1_1AuditLogEntry.html  classdiscpp_1_1AuthenticationException-members.html  classdiscpp_1_1AuthenticationException.html  classdiscpp_1_1Cache-members.html  classdiscpp_1_1Cache.html  classdiscpp_1_1Channel-members.html  classdiscpp_1_1Channel.html  classdiscpp_1_1ChannelCreateEvent-members.html  classdiscpp_1_1ChannelCreateEvent.html  classdiscpp_1_1ChannelDeleteEvent-members.html  classdiscpp_1_1ChannelDeleteEvent.html  classdiscpp_1_1ChannelPinsUpdateEvent-members.html  classdiscpp_1_1ChannelPinsUpdateEvent.html  classdiscpp_1_1ChannelUpdateEvent-members.html  classdiscpp_1_1ChannelUpdateEvent.html  classdiscpp_1_1Client-members.html  classdiscpp_1_1Client.html  classdiscpp_1_1ClientConfig-members.html  classdiscpp_1_1ClientConfig.html  (+323 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+43 more)
examples/basic/: main.cpp  ping_command.cpp
examples/basic/PingBot/: main.cpp  ping_command.cpp
examples/basic/include/: ping_command.h
examples/pingbot/: CMakeLists.txt  main.cpp  ping_command.cpp
examples/pingbot/include/: ping_command.h
examples/serverinfo/: CMakeLists.txt  CommandServerinfo.cpp  command_guild_info.cpp  main.cpp
examples/serverinfo/include/: CommandServerinfo.h  command_guild_info.h  precondition_require_guild.h
include/: activity.h  attachment.h  bot.h  channel.h  command_handler.h  context.h  discord_object.h  emoji.h  event_func_type.h  events.h  guild.h  invite.h  member.h  message.h  permission.h  reaction.h  role.h  user.h  utils.h
include/discordpp/: activity.h  bot.h  channel.h  color.h  command.h  command_handler.h  context.h  discord_object.h  embed_builder.h  emoji.h  event.h  event_func_type.h  event_handler.h  guild.h  image.h  invite.h  log.h  member.h  message.h  permission.h  reaction.h  role.h  user.h  utils.h
include/discordpp/events/: all_discord_events.h  channel_create_event.h  channel_delete_event.h  channel_pins_update_event.h  channel_update_event.h  guild_ban_add_event.h  guild_ban_remove_event.h  guild_create_event.h  guild_delete_event.h  guild_emojis_update_event.h  guild_integrations_update_event.h  guild_member_add_event.h  guild_member_remove_event.h  guild_member_update_event.h  guild_members_chunk_event.h  guild_role_create_event.h  guild_role_delete_event.h  guild_role_update_event.h  guild_update_event.h  invalid_session_event.h  message_bulk_delete_event.h  message_create_event.h  message_created_event.h  message_delete_event.h  message_reaction_add_event.h  message_reaction_remove_all_event.h  message_reaction_remove_event.h  message_update_event.h  precense_update_event.h  presense_update_event.h  ready_event.h  reconnect_event.h  resumed_event.h  typing_start_event.h  user_update_event.h  voice_server_update_event.h  voice_state_update_event.h  webhooks_update_event.h
include/discpp/: activity.h  attachment.h  audit_log.h  bot.h  bot_config.h  cache.h  channel.h  client.h  client_config.h  color.h  command.h  command_handler.h  context.h  discord_object.h  embed_builder.h  emoji.h  event.h  event_dispatcher.h  event_handler.h  exceptions.h  guild.h  http_client.h  image.h  intents.h  invite.h  ixweb_http_client.h  json_object.h  log.h  member.h  message.h  permission.h  presence.h  ratelimit.h  reaction.h  role.h  settings.h  snowflake.h  user.h  utils.h  utils.h~  (+1 more)
include/discpp/events/: all_discord_events.h  channel_create_event.h  channel_delete_event.h  channel_pins_update_event.h  channel_update_event.h  dm_channel_create_event.h  dm_channel_delete_event.h  dm_channel_update_event.h  guild_ban_add_event.h  guild_ban_remove_event.h  guild_channel_create_event.h  guild_channel_delete_event.h  guild_channel_update_event.h  guild_create_event.h  guild_delete_event.h  guild_emojis_update_event.h  guild_integrations_update_event.h  guild_member_add_event.h  guild_member_remove_event.h  guild_member_update_event.h  guild_members_chunk_event.h  guild_role_create_event.h  (+21 more)
src/: attachment.cpp  audit_log.cpp  bot.cpp  cache.cpp  channel.cpp  client.cpp  command.cpp  command_handler.cpp  context.cpp  discord_object.cpp  embed_builder.cpp  emoji.cpp  event_dispatcher.cpp  guild.cpp  http_client.cpp  image.cpp  invite.cpp  ixweb_http_client.cpp  json_object.cpp  member.cpp  message.cpp  permission.cpp  ratelimit.cpp  reaction.cpp  role.cpp  settings.cpp  snowflake.cpp  user.cpp  utils.cpp  webhook.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp  test_message.cpp  test_utils.cpp
(+6 files in other folders)
